<resources>
    <string name="app_name">mBank</string>
    <string name="on_wrong_input">თქვენს მიერ შევსებული ველები სიგრძეში უნდა იყოს სამ სიმბოლოზე მეტი და ოცზე ნაკლები</string>
    <string name="profile">პროფილი</string>
    <string name="cards">ბარათები</string>
    <string name="history">გადახდების ისტორია</string>
    <string name="actives">აქტივები</string>
    <string name="profile_name">სახელი</string>
    <string name="profile_lastname">გვარი</string>
    <string name="profile_sex">სქესი</string>
    <string name="profile_date">დაბადების თარიღი</string>
    <string name="profile_category">კლიენტის კატეგორია</string>
    
    <string name="profile_phone">ტელეფონი</string>
    <string name="profile_address">მისამართი</string>
    <string name="profile_mail">ელფოსტა</string>

    <string name="asset_name_points">ბონუს ქულები</string>
    <string name="asset_name_liabilities">ვალდებულებები</string>
    <string name="asset_name_assets">აქტივები</string>
    <string name="asset_name_amounts">ხელმისაწვდომი თანხა</string>
    <string name="history_income_label">შემოსავალი</string>
    <string name="history_outcome_label">გასავალი</string>
    <string name="valid_thru">valid thru</string>
    <string name="პასსწორდ_ფიელდ">პაროლი</string>
    <string name="user_field">მომხმარებელი</string>
    <string name="button_come_in">შესვლა</string>
</resources>
